--- a/Tables_EDA/teams_eda/teams_notebook.ipynb
+++ b/Tables_EDA/teams_eda/teams_notebook.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-19T18:20:44.381501Z",
-     "start_time": "2024-11-19T18:20:44.355780Z"
+     "end_time": "2024-11-19T19:40:58.290784Z",
+     "start_time": "2024-11-19T19:40:58.279675Z"
     }
    },
    "source": [
@@ -32,13 +32,13 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 56
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T18:26:22.860330Z",
-     "start_time": "2024-11-19T18:26:22.849005Z"
+     "end_time": "2024-11-19T19:40:58.313690Z",
+     "start_time": "2024-11-19T19:40:58.309321Z"
     }
    },
    "cell_type": "code",
@@ -62,13 +62,13 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T18:35:40.567861Z",
-     "start_time": "2024-11-19T18:35:40.544201Z"
+     "end_time": "2024-11-19T19:40:58.343208Z",
+     "start_time": "2024-11-19T19:40:58.335146Z"
     }
    },
    "cell_type": "code",
@@ -109,13 +109,13 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 58
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T18:39:40.661305Z",
-     "start_time": "2024-11-19T18:39:40.649132Z"
+     "end_time": "2024-11-19T19:40:58.373479Z",
+     "start_time": "2024-11-19T19:40:58.367588Z"
     }
    },
    "cell_type": "code",
@@ -138,60 +138,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Series([], dtype: int64)\n",
-      "     team_id        team_name  season  league_id  \\\n",
-      "658      536          Sevilla    2020        140   \n",
-      "662      530  Atletico Madrid    2020        140   \n",
-      "663      548    Real Sociedad    2018        140   \n",
-      "664      546           Getafe    2020        140   \n",
-      "665      529        Barcelona    2020        140   \n",
-      "\n",
-      "                                  team_form  games_played_home  \\\n",
-      "658  WWDLLLWWWLWDWWDWLWWWWWWLLWWDWWWWWLDWLW                 19   \n",
-      "662  WDDWWWWWWWLWWWWWWWWDWDLWDWDWLDWWLWDWWW                 19   \n",
-      "663  WDLLWDLWDLDWWLLLLWWDDWDWDLLDDWLDLLWWWL                 19   \n",
-      "664  WDWLWLDLDDLLWDLLWWLDLLLLWLDDDLDLWLLLWD                 19   \n",
-      "665  WWDLLDWLWLWWDWDWWWWWWWDWWWWWWLWWLWDDLW                 19   \n",
-      "\n",
-      "     games_played_away  wins_home  losses_home  draws_home  ...  \\\n",
-      "658                 19         14            4           1  ...   \n",
-      "662                 19         15            1           3  ...   \n",
-      "663                 19          7            6           6  ...   \n",
-      "664                 19          6            7           6  ...   \n",
-      "665                 19         11            3           5  ...   \n",
-      "\n",
-      "     yellow_cards_91_105  yellow_cards_106_120  red_cards_0_15  \\\n",
-      "658                    0                     0               0   \n",
-      "662                    0                     0               0   \n",
-      "663                    0                     0               0   \n",
-      "664                    0                     0               1   \n",
-      "665                    0                     0               0   \n",
-      "\n",
-      "     red_cards_16_30 red_cards_31_45  red_cards_46_60  red_cards_61_75  \\\n",
-      "658                0               1                1                0   \n",
-      "662                0               0                0                0   \n",
-      "663                0               0                1                2   \n",
-      "664                0               0                1                1   \n",
-      "665                0               1                0                0   \n",
-      "\n",
-      "     red_cards_76_90  red_cards_91_105  red_cards_106_120  \n",
-      "658                0                 0                  0  \n",
-      "662                0                 0                  0  \n",
-      "663                1                 0                  0  \n",
-      "664                4                 0                  0  \n",
-      "665                1                 0                  0  \n",
-      "\n",
-      "[5 rows x 60 columns]\n"
+      "Series([], dtype: int64)\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 59
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T18:41:53.217424Z",
-     "start_time": "2024-11-19T18:41:53.204797Z"
+     "end_time": "2024-11-19T19:40:58.404789Z",
+     "start_time": "2024-11-19T19:40:58.400370Z"
     }
    },
    "cell_type": "code",
@@ -229,7 +186,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 60
   },
   {
    "metadata": {},
@@ -240,8 +197,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T18:50:24.836558Z",
-     "start_time": "2024-11-19T18:50:24.820049Z"
+     "end_time": "2024-11-19T19:40:58.430527Z",
+     "start_time": "2024-11-19T19:40:58.425952Z"
     }
    },
    "cell_type": "code",
@@ -254,8 +211,7 @@
     "print(non_numeric_data.columns.tolist())\n",
     "\n",
     "# drop the column of team_name - we have team_id it's enough\n",
-    "\n",
-    "\n"
+    "updated_data = updated_data.drop(columns=['team_name'])\n"
    ],
    "id": "ca69cf2be7afcefa",
    "outputs": [
@@ -267,7 +223,7 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 61
   },
   {
    "metadata": {},
@@ -276,10 +232,101 @@
    "id": "a774a72c583d8bd"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-19T19:40:58.466576Z",
+     "start_time": "2024-11-19T19:40:58.458825Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# encode the team_country by get_dummies\n",
+    "dummies = pd.get_dummies(updated_data['team_country'], prefix='team_country')\n",
+    "#  include these dummy variables back into original DataFrame and drop the original column\n",
+    "updated_data = pd.concat([updated_data, dummies], axis=1)\n",
+    "updated_data.drop('team_country', axis=1, inplace=True)\n",
+    "# convert in into int and not true/false\n",
+    "dummy_cols = [col for col in updated_data.columns if any(prefix in col for prefix in ['team_country_'])]\n",
+    "updated_data[dummy_cols] = updated_data[dummy_cols].astype(int)\n",
+    "\n",
+    "# To see the encoded DataFrame\n",
+    "print(updated_data.columns.tolist())\n"
+   ],
+   "id": "db045618d19f1ce9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['team_id', 'season', 'league_id', 'team_form', 'games_played_home', 'games_played_away', 'wins_home', 'losses_home', 'draws_home', 'wins_away', 'losses_away', 'draws_away', 'stadium_capacity', 'goals_scored_0_15', 'goals_scored_16_30', 'goals_scored_31_45', 'goals_scored_46_60', 'goals_scored_61_75', 'goals_scored_76_90', 'goals_scored_91_105', 'goals_scored_106_120', 'goals_conceded_0_15', 'goals_conceded_16_30', 'goals_conceded_31_45', 'goals_conceded_46_60', 'goals_conceded_61_75', 'goals_conceded_76_90', 'goals_conceded_91_105', 'goals_conceded_106_120', 'clean_sheets', 'failed_to_score', 'penalty_success_rate', 'over_0_5', 'under_0_5', 'over_1_5', 'under_1_5', 'over_2_5', 'under_2_5', 'over_3_5', 'under_3_5', 'over_4_5', 'under_4_5', 'yellow_cards_0_15', 'yellow_cards_16_30', 'yellow_cards_31_45', 'yellow_cards_46_60', 'yellow_cards_61_75', 'yellow_cards_76_90', 'yellow_cards_91_105', 'yellow_cards_106_120', 'red_cards_0_15', 'red_cards_16_30', 'red_cards_31_45', 'red_cards_46_60', 'red_cards_61_75', 'red_cards_76_90', 'red_cards_91_105', 'red_cards_106_120', 'team_country_England', 'team_country_Spain']\n"
+     ]
+    }
+   ],
+   "execution_count": 62
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": "to deal with team form - we will convert each form to ternary num and then to decimal - L=0,D=1,W=2",
    "id": "46b0b4864c89d6d8"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-19T19:40:58.597300Z",
+     "start_time": "2024-11-19T19:40:58.580501Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# dict of LDW values\n",
+    "form_dict = {'L':0, 'D':1, 'W':2}\n",
+    "\n",
+    "def process_team_form(row):\n",
+    "    # Replace each character in the string according to the dictionary\n",
+    "    ternary_string = ''.join(str(form_dict[char]) for char in row['team_form'])\n",
+    "    # Convert the ternary string (base-3) to a decimal integer\n",
+    "    return int(ternary_string, 3)  # This converts from base-3 to decimal\n",
+    "\n",
+    "updated_data_copy = updated_data.copy()\n",
+    "\n",
+    "# Apply the function to the DataFrame\n",
+    "updated_data_copy['team_form_decimal'] = updated_data_copy.apply(process_team_form, axis=1)\n",
+    "\n",
+    "# update it on the origin df\n",
+    "# Apply the function to the team_form column and create a new team_form_decimal column\n",
+    "updated_data['team_form_decimal'] = updated_data_copy[['team_form_decimal']]\n",
+    "\n",
+    "# Drop the original team_form column\n",
+    "updated_data.drop('team_form', axis=1, inplace=True)\n",
+    "\n",
+    "print(updated_data['team_form_decimal'])\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "id": "2f3b617a9943343c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       548290900582372869\n",
+      "2       960900719730237897\n",
+      "3        17749199453459283\n",
+      "4       141430418608301144\n",
+      "5       340947802311110951\n",
+      "              ...         \n",
+      "658    1252593237136407203\n",
+      "662    1150710285621040352\n",
+      "663    1064128414875219105\n",
+      "664    1162554844268106367\n",
+      "665    1254036190557446309\n",
+      "Name: team_form_decimal, Length: 460, dtype: int64\n"
+     ]
+    }
+   ],
+   "execution_count": 63
   }
  ],
  "metadata": {
