fixed team form + normalization stadium capacity

--- a/Tables_EDA/teams_eda/teams_notebook.ipynb
+++ b/Tables_EDA/teams_eda/teams_notebook.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-19T19:40:58.290784Z",
-     "start_time": "2024-11-19T19:40:58.279675Z"
+     "end_time": "2024-11-19T20:12:00.656441Z",
+     "start_time": "2024-11-19T20:12:00.646112Z"
     }
    },
    "source": [
@@ -32,13 +32,13 @@
      ]
     }
    ],
-   "execution_count": 56
+   "execution_count": 107
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T19:40:58.313690Z",
-     "start_time": "2024-11-19T19:40:58.309321Z"
+     "end_time": "2024-11-19T20:12:00.685363Z",
+     "start_time": "2024-11-19T20:12:00.678679Z"
     }
    },
    "cell_type": "code",
@@ -62,13 +62,13 @@
      ]
     }
    ],
-   "execution_count": 57
+   "execution_count": 108
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T19:40:58.343208Z",
-     "start_time": "2024-11-19T19:40:58.335146Z"
+     "end_time": "2024-11-19T20:12:00.731769Z",
+     "start_time": "2024-11-19T20:12:00.725331Z"
     }
    },
    "cell_type": "code",
@@ -109,13 +109,13 @@
      ]
     }
    ],
-   "execution_count": 58
+   "execution_count": 109
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T19:40:58.373479Z",
-     "start_time": "2024-11-19T19:40:58.367588Z"
+     "end_time": "2024-11-19T20:12:00.759810Z",
+     "start_time": "2024-11-19T20:12:00.752894Z"
     }
    },
    "cell_type": "code",
@@ -142,13 +142,13 @@
      ]
     }
    ],
-   "execution_count": 59
+   "execution_count": 110
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T19:40:58.404789Z",
-     "start_time": "2024-11-19T19:40:58.400370Z"
+     "end_time": "2024-11-19T20:12:00.784105Z",
+     "start_time": "2024-11-19T20:12:00.778444Z"
     }
    },
    "cell_type": "code",
@@ -186,7 +186,7 @@
      ]
     }
    ],
-   "execution_count": 60
+   "execution_count": 111
   },
   {
    "metadata": {},
@@ -197,8 +197,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T19:40:58.430527Z",
-     "start_time": "2024-11-19T19:40:58.425952Z"
+     "end_time": "2024-11-19T20:12:00.824449Z",
+     "start_time": "2024-11-19T20:12:00.819367Z"
     }
    },
    "cell_type": "code",
@@ -211,7 +211,10 @@
     "print(non_numeric_data.columns.tolist())\n",
     "\n",
     "# drop the column of team_name - we have team_id it's enough\n",
-    "updated_data = updated_data.drop(columns=['team_name'])\n"
+    "updated_data = updated_data.drop(columns=['team_name'])\n",
+    "\n",
+    "# drop games_played_home  games_played_away - not relevant - all teams play the same amount of games + it will have good indicator on the fixtures table\n",
+    "updated_data = updated_data.drop(columns=['games_played_home','games_played_away'])\n"
    ],
    "id": "ca69cf2be7afcefa",
    "outputs": [
@@ -223,7 +226,7 @@
      ]
     }
    ],
-   "execution_count": 61
+   "execution_count": 112
   },
   {
    "metadata": {},
@@ -234,8 +237,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T19:40:58.466576Z",
-     "start_time": "2024-11-19T19:40:58.458825Z"
+     "end_time": "2024-11-19T20:12:00.875481Z",
+     "start_time": "2024-11-19T20:12:00.868705Z"
     }
    },
    "cell_type": "code",
@@ -258,11 +261,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['team_id', 'season', 'league_id', 'team_form', 'games_played_home', 'games_played_away', 'wins_home', 'losses_home', 'draws_home', 'wins_away', 'losses_away', 'draws_away', 'stadium_capacity', 'goals_scored_0_15', 'goals_scored_16_30', 'goals_scored_31_45', 'goals_scored_46_60', 'goals_scored_61_75', 'goals_scored_76_90', 'goals_scored_91_105', 'goals_scored_106_120', 'goals_conceded_0_15', 'goals_conceded_16_30', 'goals_conceded_31_45', 'goals_conceded_46_60', 'goals_conceded_61_75', 'goals_conceded_76_90', 'goals_conceded_91_105', 'goals_conceded_106_120', 'clean_sheets', 'failed_to_score', 'penalty_success_rate', 'over_0_5', 'under_0_5', 'over_1_5', 'under_1_5', 'over_2_5', 'under_2_5', 'over_3_5', 'under_3_5', 'over_4_5', 'under_4_5', 'yellow_cards_0_15', 'yellow_cards_16_30', 'yellow_cards_31_45', 'yellow_cards_46_60', 'yellow_cards_61_75', 'yellow_cards_76_90', 'yellow_cards_91_105', 'yellow_cards_106_120', 'red_cards_0_15', 'red_cards_16_30', 'red_cards_31_45', 'red_cards_46_60', 'red_cards_61_75', 'red_cards_76_90', 'red_cards_91_105', 'red_cards_106_120', 'team_country_England', 'team_country_Spain']\n"
+      "['team_id', 'season', 'league_id', 'team_form', 'wins_home', 'losses_home', 'draws_home', 'wins_away', 'losses_away', 'draws_away', 'stadium_capacity', 'goals_scored_0_15', 'goals_scored_16_30', 'goals_scored_31_45', 'goals_scored_46_60', 'goals_scored_61_75', 'goals_scored_76_90', 'goals_scored_91_105', 'goals_scored_106_120', 'goals_conceded_0_15', 'goals_conceded_16_30', 'goals_conceded_31_45', 'goals_conceded_46_60', 'goals_conceded_61_75', 'goals_conceded_76_90', 'goals_conceded_91_105', 'goals_conceded_106_120', 'clean_sheets', 'failed_to_score', 'penalty_success_rate', 'over_0_5', 'under_0_5', 'over_1_5', 'under_1_5', 'over_2_5', 'under_2_5', 'over_3_5', 'under_3_5', 'over_4_5', 'under_4_5', 'yellow_cards_0_15', 'yellow_cards_16_30', 'yellow_cards_31_45', 'yellow_cards_46_60', 'yellow_cards_61_75', 'yellow_cards_76_90', 'yellow_cards_91_105', 'yellow_cards_106_120', 'red_cards_0_15', 'red_cards_16_30', 'red_cards_31_45', 'red_cards_46_60', 'red_cards_61_75', 'red_cards_76_90', 'red_cards_91_105', 'red_cards_106_120', 'team_country_England', 'team_country_Spain']\n"
      ]
     }
    ],
-   "execution_count": 62
+   "execution_count": 113
   },
   {
    "metadata": {},
@@ -273,34 +276,33 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-19T19:40:58.597300Z",
-     "start_time": "2024-11-19T19:40:58.580501Z"
+     "end_time": "2024-11-19T20:12:01.002498Z",
+     "start_time": "2024-11-19T20:12:00.990727Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# dict of LDW values\n",
-    "form_dict = {'L':0, 'D':1, 'W':2}\n",
+    "form_dict = {'L':0, 'D':1, 'W':3}\n",
     "\n",
     "def process_team_form(row):\n",
     "    # Replace each character in the string according to the dictionary\n",
-    "    ternary_string = ''.join(str(form_dict[char]) for char in row['team_form'])\n",
-    "    # Convert the ternary string (base-3) to a decimal integer\n",
-    "    return int(ternary_string, 3)  # This converts from base-3 to decimal\n",
+    "    form_numeric_string = ''.join(str(form_dict[char]) for char in row['team_form'])\n",
+    "    return int(form_numeric_string)  \n",
     "\n",
     "updated_data_copy = updated_data.copy()\n",
     "\n",
     "# Apply the function to the DataFrame\n",
-    "updated_data_copy['team_form_decimal'] = updated_data_copy.apply(process_team_form, axis=1)\n",
+    "updated_data_copy['team_form_ternary'] = updated_data_copy.apply(process_team_form, axis=1)\n",
     "\n",
     "# update it on the origin df\n",
     "# Apply the function to the team_form column and create a new team_form_decimal column\n",
-    "updated_data['team_form_decimal'] = updated_data_copy[['team_form_decimal']]\n",
+    "updated_data['team_form_ternary'] = updated_data_copy[['team_form_ternary']]\n",
     "\n",
     "# Drop the original team_form column\n",
     "updated_data.drop('team_form', axis=1, inplace=True)\n",
     "\n",
-    "print(updated_data['team_form_decimal'])\n",
+    "print(updated_data['team_form_ternary'])\n",
     "\n",
     "\n",
     "\n"
@@ -311,22 +313,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       548290900582372869\n",
-      "2       960900719730237897\n",
-      "3        17749199453459283\n",
-      "4       141430418608301144\n",
-      "5       340947802311110951\n",
-      "              ...         \n",
-      "658    1252593237136407203\n",
-      "662    1150710285621040352\n",
-      "663    1064128414875219105\n",
-      "664    1162554844268106367\n",
-      "665    1254036190557446309\n",
-      "Name: team_form_decimal, Length: 460, dtype: int64\n"
+      "0      10133133000100333013003331103103013330\n",
+      "2      30101313000330003300003313311033131130\n",
+      "3         10013013130300330013110113000303000\n",
+      "4        331103330310113333031330301330030133\n",
+      "5       3031033331331333130131131133333130013\n",
+      "                        ...                  \n",
+      "658    33100033303133130333333003313333301303\n",
+      "662    31133333330333333331310313130133031333\n",
+      "663    31003103101330000331131310011301003330\n",
+      "664    31303010110031003301000030111010300031\n",
+      "665    33100130303313133333331333333033031103\n",
+      "Name: team_form_ternary, Length: 460, dtype: object\n"
      ]
     }
    ],
-   "execution_count": 63
+   "execution_count": 114
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "normalize the integer values",
+   "id": "865ae9d9a61d3fa8"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-19T20:12:01.129649Z",
+     "start_time": "2024-11-19T20:12:01.119276Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(updated_data.head())\n",
+    "\n",
+    "# normalize stadium capacity with min-max - between 0-1 - not standartization cause I can't assume it normally distribute\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# Create a MinMaxScaler object\n",
+    "min_max_scaler = MinMaxScaler()\n",
+    "\n",
+    "# Fit and transform 'stadium_capacity'\n",
+    "updated_data['stadium_capacity_normalized'] = min_max_scaler.fit_transform(updated_data[['stadium_capacity']])\n",
+    "\n",
+    "print(updated_data['stadium_capacity_normalized'])\n"
+   ],
+   "id": "3dbc3d0356648d67",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   team_id  season  league_id  wins_home  losses_home  draws_home  wins_away  \\\n",
+      "0       39    2018         39         10            5           4          6   \n",
+      "2       44    2019         39          8            7           4          7   \n",
+      "3       44    2020         39          4            9           6          6   \n",
+      "4       48    2020         39         10            5           4          9   \n",
+      "5       33    2020         39          9            6           4         12   \n",
+      "\n",
+      "   losses_away  draws_away  stadium_capacity  ...  red_cards_16_30  \\\n",
+      "0            8           5             34624  ...                1   \n",
+      "2            7           5             22546  ...                0   \n",
+      "3           10           3             22546  ...                0   \n",
+      "4            6           4             62500  ...                0   \n",
+      "5            0           7             76212  ...                1   \n",
+      "\n",
+      "   red_cards_31_45  red_cards_46_60  red_cards_61_75  red_cards_76_90  \\\n",
+      "0                0                0                0                0   \n",
+      "2                0                0                0                0   \n",
+      "3                0                0                0                0   \n",
+      "4                1                0                0                2   \n",
+      "5                0                0                0                0   \n",
+      "\n",
+      "   red_cards_91_105  red_cards_106_120  team_country_England  \\\n",
+      "0                 0                  0                     1   \n",
+      "2                 0                  0                     1   \n",
+      "3                 0                  0                     1   \n",
+      "4                 0                  0                     1   \n",
+      "5                 0                  0                     1   \n",
+      "\n",
+      "   team_country_Spain                       team_form_ternary  \n",
+      "0                   0  10133133000100333013003331103103013330  \n",
+      "2                   0  30101313000330003300003313311033131130  \n",
+      "3                   0     10013013130300330013110113000303000  \n",
+      "4                   0    331103330310113333031330301330030133  \n",
+      "5                   0   3031033331331333130131131133333130013  \n",
+      "\n",
+      "[5 rows x 58 columns]\n",
+      "0      0.343316\n",
+      "2      0.187277\n",
+      "3      0.187277\n",
+      "4      0.703452\n",
+      "5      0.880600\n",
+      "         ...   \n",
+      "658    0.524508\n",
+      "662    0.806289\n",
+      "663    0.412769\n",
+      "664    0.120704\n",
+      "665    0.618521\n",
+      "Name: stadium_capacity_normalized, Length: 460, dtype: float64\n"
+     ]
+    }
+   ],
+   "execution_count": 115
   }
  ],
  "metadata": {
