event eda continue2

--- a/Tables_EDA/events/events_notebook.ipynb
+++ b/Tables_EDA/events/events_notebook.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:59:35.835924Z",
-     "start_time": "2024-12-09T12:59:35.641296Z"
+     "end_time": "2024-12-09T16:28:36.152760Z",
+     "start_time": "2024-12-09T16:28:35.592609Z"
     }
    },
    "source": [
@@ -34,26 +34,54 @@
     "#         if not isinstance(row, int):\n",
     "#             print(f\"The type of row {row} (at index {idx}) is {type(row)}\")\n",
     "\n",
+    "\n",
+    "data1 = pd.read_csv('events.csv')\n",
+    "# Count unique values in the 'fixture_id' column\n",
+    "unique_count = data['fixture_id'].nunique()\n",
+    "unique_count1 = data1['fixture_id'].nunique()\n",
+    "\n",
+    "# Print the result\n",
+    "print(f\"Number of unique items in 'fixture_id' after all run: {unique_count}\")\n",
+    "print(f\"Number of unique items in 'fixture_id' before all run: {unique_count1}\")\n",
+    "\n",
+    "row_count = data.shape[0]\n",
+    "print(f\"Total number of rows in the DataFrame: {row_count}\")\n",
+    "row_count1 = data1.shape[0]\n",
+    "print(f\"Total number of rows in the DataFrame: {row_count1}\")\n",
+    "\n",
+    "\n",
     "        "
    ],
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\peret\\AppData\\Local\\Temp\\ipykernel_15716\\4104512759.py:8: DtypeWarning: Columns (1,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv('merged_events.csv')\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['fixture_id', 'event_time', 'team_id', 'event_type', 'detailed_type', 'main_player_id', 'secondary_player_id']\n"
+      "['fixture_id', 'event_time', 'team_id', 'event_type', 'detailed_type', 'main_player_id', 'secondary_player_id']\n",
+      "Number of unique items in 'fixture_id' after all run: 18457\n",
+      "Number of unique items in 'fixture_id' before all run: 18531\n",
+      "Total number of rows in the DataFrame: 394976\n",
+      "Total number of rows in the DataFrame: 507235\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\peret\\AppData\\Local\\Temp\\ipykernel_15716\\2480587879.py:8: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv('merged_events.csv')\n"
+      "C:\\Users\\peret\\AppData\\Local\\Temp\\ipykernel_15716\\4104512759.py:25: DtypeWarning: Columns (1,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data1 = pd.read_csv('events.csv')\n"
      ]
     }
    ],
-   "execution_count": 100
+   "execution_count": 123
   },
   {
    "metadata": {
